--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,6 @@
 @import './scss/partials/navStyle';
 @import './scss/partials/homeStyle';
+@import './scss/partials/footer';
 @import './scss/grid/grid';
 
 *{
