--- a/src/scss/modules/_variables.scss
+++ b/src/scss/modules/_variables.scss
@@ -1,11 +1,15 @@
 $main-color: rgba(0,237,0,255);
 $main-color-opacity: rgba(0,237,0,0.8);
+$main-color-opacity-more: rgba(0,237,0,0.4);
 $main-color-hover: rgba(100,100,100,0.8);
 $main-color2: rgba(70,70,70,0.8);
 $main-font: 'Lato',Georgia, "Times New Roman", Times, serif;
 $logo-SVG: url("./components/images/ultraTreningLogo1.svg") ;
+$logoWhite-SVG: url("./components/images/ultraTreningLogo1White.svg") ;
 $logo-SVG2: url("./components/images/ultraTreningLogo2.svg");
+$logoWhite-SVG2: url("./components/images/ultraTreningLogo2White.svg");
 $backgroundMain1-SVG: url("./components/images/backgroundMain1.svg");
+$backgroundMainBridges-SVG: url("./components/images/bridge.jpg");
 $backgroundMain2-SVG: url("./components/images/backgroundMain2.svg");
 $backgroundsection2-SVG: url("./components/images/backgroundsection2.svg");
 $backgroundsection4-SVG: url("./components/images/backgroundsection4.svg");
@@ -29,7 +33,7 @@ $break-to-encoMobile-SVG: url("./components/images/break-to-encoMobile.svg");
 $arrowTop-SVG: url("./components/images/arrowTop.svg");
 $more-SVG: url("./components/images/more.svg");
 $menu-SVG:  url("./components/images/menuBtn.svg");
-$nav-mobile-height: 50px;
-$nav-mobile-heightmargin: 16px;
-$nav-mobile-heightplusmargin: 66px;
-$side-nav-right: -145px;
+// $nav-mobile-height: 30px;
+// $nav-mobile-heightmargin: 16px;
+// $nav-mobile-heightplusmargin: 56px;
+// $side-nav-right: -110px;
