--- a/src/scss/partials/_homeStyle.scss
+++ b/src/scss/partials/_homeStyle.scss
@@ -1,366 +1,8 @@
 @import "../modules/variables";
 @import "../modules/mixins";
-
-//STYLING FIRST SECTION
-.home-class{
-  height: 100vh;
-  background-image: $backgroundMain1-SVG;
-  background-color: rgba(221, 220, 221,0.5);
-  background-size: contain;
-}
-.welcome-text-cnt{
-  // border:1px solid brown;
-  display: flex;
-  flex-direction: column;
-  .welcome-text{
-    width:100%;
-    margin: 26vh auto auto auto;
-    font-weight: bold;
-
-    // border:1px solid blue;
-    .welcome-text-top{
-      margin: auto auto auto 20px;
-      font-size: 6vh;
-      font-weight: bold;
-      color:white;
-      background-color: rgba(0,237,0,0.75);
-      border-radius: 10px;
-      padding: 15px;
-    }
-    .welcome-btn{
-      margin: 8vh auto auto auto;
-      background-color: $main-color2;
-      width:50vw;
-      height:10vh;
-      display:flex;
-      align-items: center;
-      justify-content: center;
-      border-radius: 10px;
-      text-transform: uppercase;
-      font-size: 3vh;
-      font-weight: bold;
-      font-family: $main-font;
-      &:hover{
-        background-color: $main-color-hover
-      }
-    }
-  }
-  .move-down-cnt{
-    width:100%;
-    // border:1px solid red;
-    .move-down-btn{
-      margin: 0px auto 8px auto;
-      display:flex;
-      justify-content: center;
-      align-items: center;
-      color:black;
-      background-color: white;
-      width:50px;
-      height:50px;
-      border-radius: 30px;
-      font-size: 30px;
-      font: $main-font;
-    }
-  }
-}
-
-//SECTION 2 BREAKING DIV WITH CURVED LINE
-
-#welcome-encourage-break{
-  margin-top: -3px;
-  margin-bottom: -3px;
-  height: 10vh;
-  background-image: $break-to-encoMobile-SVG;
-  background-size: cover;
-}
-
-#encourage-advantage-break{
-  height: 10vh;
-  background-position: center;
-  background-image: $break-to-advMobile-SVG;
-  background-size: cover;
-
-}
-
-//SECTION 2 STYLING
-
-.encourage-class{
-  height: 60vh;
-}
-#encourage-entry{
-  // background-image: $backgroundsection2-SVG;
-  background-color: $main-color;
-  background-size: contain;
-  background-attachment: fixed;
-}
-.encourage-text-cnt{
-  width:100%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  .encourage-text{
-    display: flex;
-    flex-wrap: wrap;
-    margin: auto auto auto 20px;
-    font-size: 40px;
-    font-weight: bold;
-      @for $i from 0 through 3 {
-      .moving-numbers#{$i}{
-        background-color: white;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        font-weight: bold;
-        text-transform: lowercase;
-        color:black;
-        font-size: 25px+(15px*$i);
-        width:120px;
-        height:50px;
-        @include animationText(all,0.2s,linear);
-      }//moving-numbers
-    }//loop for
-    .encourage-text-psc{
-      margin: auto auto auto 1px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      // border:1px solid red;
-      height:60px;
-    }
-    .encourage-text-final{
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      color: white;
-      background-color: black;
-      border-radius: 10px;
-      margin-top: 30px;
-      // border:3px solid black;
-      padding: 5px;
-      height:50px;
-      text-transform: uppercase;
-      font-size: 24px;
-    }
-}//encourage-text
-}//encourage-text-cnt
-
-//SECTION 3 STYLING
-
-.advantage-class{
-  height: 150vh;
-}
-
-.advantage-main-title{
-  height:10vh;
-  width: 82vw;
-  font-size: 6vh;
-  // border:1px solid black;
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  // text-transform: uppercase;
-}
-.advantage-point{
-  // border:1px solid orange;
-  // height:13vh;
-  margin-top: 10px;
-  width:100%;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-
-  @for $i from 1 through 8 {
-    .advantage-pic-no#{$i}{
-      background-color: $main-color;
-      border-radius:50%;
-      margin-top: 2px;
-      height:70px;
-      width:70px;
-      background-position: center;
-      background-size: 40px 40px;
-      background-repeat: no-repeat;
-      @if $i == 1{
-        background-image: $advantageCalendar-SVG;
-      } @else if $i == 2{
-        background-image: $topShape-SVG;
-      } @else if $i == 3{
-        background-image: $diagram-SVG;
-      } @else if $i == 4{
-        background-image: $page-SVG;
-      } @else if $i == 5{
-        background-image: $weight-SVG;
-      } @else if $i == 6{
-        background-image: $exerciseType-SVG;
-      } @else if $i == 7{
-        background-image: $leisureTime-SVG;
-      } @else if $i == 8{
-        background-image: $periods-SVG;
-      }
-      }
-  }
-  .advantage-title{
-    // margin-top: 2px;
-    // margin-left: 6px;
-    // border:1px solid black;
-    // height:12vh
-    margin-left: 7px;
-    width:63vw;
-    font-size:5vh;
-    font-weight: bold;
-    font-style: $main-font;
-    .advantage-text{
-      font-size: 12px;
-      font-style: $main-font;
-      font-weight: bold;
-    }//adv text
-  }
-}//adv point
-
-// SECTION 4 BREAKING DIVS
-#advantage-chain-break{
-  // margin-bottom: -3px;
-  height: 6vh;
-  @include linearGradientEf(90deg,$main-color,$main-color 30px,#000 30px,#000 90px);
-}
-
-.safety-footer-break{
-  // margin-bottom: -3px;
-  height: 6vh;
-  @include linearGradientEf(45deg,$main-color,$main-color 10px,#ffffff 10px,#ffffff 20px);
-}
-
-// SECTION 4 STYLING
-
-.chain-class{
-  // height: 200vh;
-  // background-image: $backgroundsection4-SVG;
-  // background-size: contain;
-  background-attachment: fixed;
-  background-color: 	rgba(230, 230, 230,0.8);
-  background-image: $backgroundMain1-SVG;
-
-}
-#chain-title{
-  background-color: black;
-  color:white;
-  height:35vw;
-  font-size: 50px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-transform: uppercase;
-
-}
-.chain-cnt{
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-  // border: 1px solid green;
-  .chain-all-links{
-    width:160px;
-    height:160px;
-    background-color: $main-color-opacity;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    border-radius: 50%;
-
-    .chain-link-no{
-      // opacity: 1;
-      // margin-top: 30px;
-      // border: 1px solid green;
-      // margin-bottom: 0px;
-      // display: flex;
-      // flex-wrap: wrap;
-      // justify-content: center;
-      // align-items: center;
-      font-weight: bold;
-      color: white;
-      // height: 9vh;
-      // width:42vh;
-      font-size: 70px;
-
-    }
-    .chain-link-texts1{
-      font-size: 20px;
-      font-weight: bold;
-      text-align:center;
-    }
-    .chain-link-texts{
-      // border: 1px solid green;
-
-      margin-bottom: 20px;
-      text-align:center;
-      font-weight: bold;
-      // color: white;
-      font-size: 22px;
-    }
-  }
-
-  .link{
-    height: 4vh;
-    width: 100%;
-    // background-image: $broadBelt-SVG;
-    // background-color: $main-color;
-    // background-size: contain;
-    // background-position: center;
-  }
-}
-
-
-// SECTION 5 STYLING
-
-.safety-class{
-  height: 40vh;
-  // background-color: black;
-}
-.safety-cnt{
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-  text-transform: uppercase;
-  // border: 1px solid green;
-  .safety-title{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 10vh;
-    font-size: 23px;
-    font-weight: 600;
-    // color: white;
-  }
-  .safety-text{
-    margin-top: 0.5vh;
-    font-weight: 600;
-    color: $main-color;
-    height: 50vh;
-    font-size: 13px;
-    text-align:center;
-  }
-}
-
-
-
-// FIXED BTN TO RETURN TO THE INITIAL POSITION
-
-.show-return-btn{
-  background-color: $main-color;
-  background-image: $arrowTop-SVG;
-  background-size: contain;
-  width:40px;
-  height:40px;
-  font-size: 30px;
-  font-weight: 600;
-  font: $main-font;
-  position:fixed;
-  left:0;
-  top:30vh;
-  text-transform: uppercase;
-  @include boxShadow(grey);
-}
+@import "./homeStyle-partials/firstSection";
+@import "./homeStyle-partials/secondSection";
+@import "./homeStyle-partials/thirdSection";
+@import "./homeStyle-partials/fourthSection";
+@import "./homeStyle-partials/fifthSection";
+@import "./homeStyle-partials/returnBtn";
